@@ -136,8 +136,10 @@ private:
 	
 	//overridden from command_executor
 	virtual void cycle_units();
+	virtual void cycle_back_units();
 	virtual void end_turn();
 	virtual void goto_leader();
+	virtual void unit_hold_position();
 	virtual void end_unit_turn();
 	virtual void undo();
 	virtual void redo();
