@@ -1,5 +1,7 @@
 CVS HEAD:
  * user interface improvements:
+   * added hotkey for cycle to previous unit (shift-N) (part of #10703)
+   * added hotkey for hold position (patch 3994)
    * made the right Command key on Mac OS X work like the left one
    * made the 100 gold minimum for next scenario explicitly mentioned (#12987)
    * made menu widgets sortable
